refactor(datapermission): 使用 JDK17 的兼容写法